fix hotspot visible on mobile

--- a/src/styles/components/map.css
+++ b/src/styles/components/map.css
@@ -68,6 +68,7 @@
 }
 
 #hotspot {
+  @apply hidden md:block;
   @apply scale-0;
 }
 
